fix extra padding on multi post featured image col3

--- a/src/scss/globals/_grid-globals.scss
+++ b/src/scss/globals/_grid-globals.scss
@@ -28,10 +28,7 @@
   }
 
   .col3 {
-    @include col(3) {
-      margin-top: 20px;
-      margin-bottom: 20px;
-    };
+    @include col(3);
   }
 
   .col4 {
